# 01_helloworld

./: .dockerignore  .travis.yml  CMakeLists.txt  Dockerfile  DockerfileCentos  DockerfileCentosTest  DockerfileUbuntu  DockerfileUbuntuTest  build.cmd  build_docker.cmd  build_linux.sh  build_linux_docker.cmd  build_windows.cmd
src/: CMakeLists.txt  lib.cpp  main.cpp  test_version.cpp
